Ignore appsetings.json.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ MicroSocialPlatform/obj
 .vs
 MicroSocialPlatform/Properties
 MicroSocialPlatform/ScaffoldingReadMe.txt
+MicroSocialPlatform/appsettings.json
