--- a/MicroSocialPlatform/MicroSocialPlatform.csproj
+++ b/MicroSocialPlatform/MicroSocialPlatform.csproj
@@ -21,4 +21,8 @@
       <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
